--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
     <script type="text/javascript">
-      var AMapUIProtocol = 'https:';  //注意结尾包括冒号
+      var AMapUIProtocol = 'https:'; //注意结尾包括冒号
       window._AMapSecurityConfig = {
-            securityJsCode:'ac8ae7953701a2ca94fcf04fbcf19560', 
-          }
+        securityJsCode: 'ac8ae7953701a2ca94fcf04fbcf19560',
+      };
     </script>
     <script src="https://webapi.amap.com/maps?v=1.4.15&key=eef99fc2774f92eadff1c68b4d4485ec"></script>
     <script src="https://webapi.amap.com/ui/1.1/main.js?v=1.1.1"></script>
